fix: add spacing between two columns in form cell

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,7 @@ details li {
     height: 85%;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 32px 1fr;
     grid-template-rows: 1fr 2fr 2fr;
     padding: 32px;
     text-align: left;
@@ -347,6 +347,27 @@ textarea {
 #form-email {
     grid-column-start: 1;
     grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+
+#form-foodtype {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+#form-course {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+#form-feedback {
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
 }
